--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,7 @@
 	margin: 0;
 	border: 0;
 }
-body {
-}
+
 .wedding {
 	display: flex;
 	height: 100%;
@@ -606,9 +605,11 @@ input[type='checkbox']:checked {
 }
 
 button:hover {
-	background-color: #f0f0f0;
+	background-color: #880000;
 }
-
+.form-button:hover {
+	color: #ffffff;
+}
 .tg-container {
 	display: flex;
 	flex-direction: column;
@@ -672,15 +673,38 @@ a {
 	font-weight: 200;
 }
 .background {
-	position: absolute; /* обязательно absolute, чтобы прокручивался */
+	position: absolute; /* вместо fixed */
 	top: 0;
 	left: 0;
 	width: 100%;
-	min-height: 100%; /* занимает минимум экран, растягивается ниже */
-	height: auto; /* автоматически увеличивается по высоте страницы */
-	background-image: url('/img/background190.png');
-	background-repeat: repeat-y; /* бесконечно повторяется вниз */
-	background-size: 100% auto; /* ширина 100%, высота пропорционально */
-	background-position: top center;
-	z-index: -1; /* всегда сзади контента */
+	height: 100%;
+	min-height: 100%;
+	background-image: url('/img/bgall.png');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	z-index: -1;
+	opacity: 0.6;
+}
+.thanks {
+	text-align: center;
+	margin-top: 150px;
+}
+
+@media (max-width: 768px) {
+	.background {
+		background-image: url('/img/bgallsmart.png');
+	}
+	.header {
+		margin-top: 143px;
+	}
+	.invite-message {
+		width: 415px;
+	}
+	.wishes {
+		width: 415px;
+	}
+	.form {
+		margin-top: 56px;
+	}
 }
