--- a/css/style.css
+++ b/css/style.css
@@ -94,18 +94,15 @@ h2 {
 }
 .header__images {
 	width: 380px;
-	height: 323px;
-	border-radius: 40px;
 	margin-top: 10px;
 	margin-bottom: 23px;
-	overflow: hidden;
 }
 .container__header img {
 	width: 380px;
 	height: 323px;
+	border-radius: 40px;
 	object-fit: cover;
 	object-position: 50% 50%;
-	transform: scale(1.1);
 }
 .invite-message {
 	width: 430px;
@@ -219,7 +216,7 @@ p {
 	transform: translateY(-50%);
 	width: 34.82px;
 	height: 34.82px;
-	background-image: url('/img/heart.png');
+	background-image: url('/img/heart.webp');
 	background-size: contain;
 
 	/* Фильтр для красного цвета */
@@ -494,7 +491,7 @@ p {
 	background-color: #65000a;
 	border-radius: 24px;
 	width: 430px;
-	height: 267px;
+	padding-bottom: 32px;
 }
 
 .wishes h2 {
@@ -549,7 +546,7 @@ legend {
 	margin-bottom: 21px;
 }
 input[type='text'],
-select {
+.custom-select {
 	width: 100%;
 	border: none;
 	border-bottom: 1px solid #999;
@@ -560,6 +557,7 @@ select {
 	font-weight: 100;
 	outline: none;
 	font-family: 'Onest';
+	color: #262626cc;
 }
 
 fieldset {
@@ -652,6 +650,18 @@ footer {
 
 a {
 	color: #b70f23;
+	text-decoration: none;
+}
+.footer-question h2 a {
+	display: flex;
+	flex-direction: column;
+}
+.footer-question h2 a::after {
+	content: '';
+	width: 100%;
+	height: 1px;
+	background-color: #b70f23;
+	margin-top: -15px;
 }
 .footer-question {
 	margin-top: 60px;
@@ -702,9 +712,12 @@ a {
 	}
 	.wishes {
 		width: 415px;
+		background-color: #65000a;
+		padding-bottom: 10px;
+		border-radius: 24px;
 	}
 	.form {
-		margin-top: 56px;
+		margin-top: 168px;
 	}
 	.music-btn {
 		width: 40px;
@@ -749,157 +762,75 @@ a {
 .music-icon:not(.active) {
 	opacity: 0;
 }
-/* DeepSeek Яркие анимации с увеличенной длительностью */
-@keyframes slideFromLeft {
-	from {
-		opacity: 0;
-		transform: translateX(-80px) scale(0.95);
-	}
-	to {
-		opacity: 1;
-		transform: translateX(0) scale(1);
-	}
+select {
+	margin-left: 2px;
+}
+.custom-select {
+	position: relative;
+	width: 100%;
 }
 
-@keyframes slideFromRight {
-	from {
-		opacity: 0;
-		transform: translateX(80px) scale(0.95);
-	}
-	to {
-		opacity: 1;
-		transform: translateX(0) scale(1);
-	}
+.selected-option {
+	cursor: pointer;
+	text-align: left; /* Выравнивание текста */
 }
 
-@keyframes slideFromTop {
-	from {
-		opacity: 0;
-		transform: translateY(-50px) scale(0.98);
-	}
-	to {
-		opacity: 1;
-		transform: translateY(0) scale(1);
-	}
+.options {
+	display: none;
+	position: absolute;
+	width: 100%;
+	border: 1px solid #ccc;
+	background: white;
+	list-style: none;
+	padding: 0;
+	margin: 0;
 }
 
-@keyframes slideFromBottom {
-	from {
-		opacity: 0;
-		transform: translateY(50px) scale(0.98);
-	}
-	to {
-		opacity: 1;
-		transform: translateY(0) scale(1);
-	}
+.options li {
+	padding: 5px;
+	text-align: left;
 }
 
-/* Общие стили для анимаций */
-header,
-section,
-footer {
-	opacity: 1;
-	animation-fill-mode: forwards;
-	will-change: transform, opacity;
-	backface-visibility: hidden;
+.options li:hover {
+	background: #f0f0f0;
 }
 
-/* Десктопная версия с увеличенной длительностью */
-@media (min-width: 769px) {
-	header,
-	section,
-	footer {
-		opacity: 0;
-		animation-duration: 1.2s; /* Увеличено с 0.8s */
-		animation-timing-function: cubic-bezier(
-			0.22,
-			0.61,
-			0.36,
-			1
-		); /* Более плавная кривая */
-	}
-
-	/* HEADER */
-	header {
-		animation-name: slideFromTop;
-		animation-delay: 0.3s; /* Увеличена задержка */
-	}
-
-	/* SECTIONS */
-	section:nth-child(odd) {
-		animation-name: slideFromLeft;
-	}
-	section:nth-child(even) {
-		animation-name: slideFromRight;
-	}
-
-	/* Последовательные задержки с увеличенными интервалами */
-	section:nth-of-type(1) {
-		animation-delay: 0.6s;
-	}
-	section:nth-of-type(2) {
-		animation-delay: 0.9s;
-	}
-	section:nth-of-type(3) {
-		animation-delay: 1.2s;
-	}
-	section:nth-of-type(4) {
-		animation-delay: 1.5s;
-	}
-	section:nth-of-type(5) {
-		animation-delay: 1.8s;
-	}
-	section:nth-of-type(6) {
-		animation-delay: 2.1s;
-	}
-	section:nth-of-type(7) {
-		animation-delay: 2.4s;
-	}
-	section:nth-of-type(8) {
-		animation-delay: 2.7s;
-	}
-
-	/* FOOTER */
-	footer {
-		animation-name: slideFromBottom;
-		animation-delay: 3s;
-	}
+.custom-select.active .options {
+	display: block;
 }
-
-/* Мобильная версия с увеличенной длительностью */
-@media (max-width: 768px) {
-	@keyframes mobileFadeIn {
-		from {
-			opacity: 0;
-			transform: translateY(20px);
-		}
-		to {
-			opacity: 1;
-			transform: translateY(0);
-		}
+@media (max-width: 430px) {
+	.invite-message {
+		width: 100%;
 	}
-
-	header,
-	section,
-	footer {
-		animation: mobileFadeIn 0.9s ease-out forwards !important; /* Увеличено с 0.6s */
-		animation-delay: 0.2s !important;
+	.header__images {
+		width: 100%;
+		padding: 0 10px;
 	}
-
-	/* Последовательность с увеличенными интервалами */
-	section:nth-of-type(1) {
-		animation-delay: 0.3s !important;
+	.container__header img {
+		width: calc(100% - 40px);
 	}
-	section:nth-of-type(2) {
-		animation-delay: 0.5s !important;
+	.location {
+		width: 100%;
+		height: unset;
 	}
-	section:nth-of-type(3) {
-		animation-delay: 0.7s !important;
+	.plan {
+		transform: scale(0.9);
 	}
-	section:nth-of-type(4) {
-		animation-delay: 0.9s !important;
+	.map-image {
+		width: 117px;
 	}
-	footer {
-		animation-delay: 1.1s !important;
+	.dress-code {
+		width: 100%;
+		text-align: center;
+	}
+	.dress-code-description {
+		padding: 0 10px;
+	}
+	.wishes {
+		width: 100%;
+	}
+	.rsvp-form {
+		padding: 0 5px;
+		width: calc(100% - 10px);
 	}
 }
