--- a/css/style.css
+++ b/css/style.css
@@ -704,16 +704,13 @@ a {
 	.background {
 		background-image: url('/img/bgallsmart.png');
 	}
-	.header {
-		margin-top: 143px;
-	}
 	.invite-message {
 		width: 415px;
 	}
 	.wishes {
 		width: 415px;
 		background-color: #65000a;
-		padding-bottom: 10px;
+		padding-bottom: 34px;
 		border-radius: 24px;
 	}
 	.form {
@@ -798,10 +795,14 @@ select {
 .custom-select.active .options {
 	display: block;
 }
-@media (max-width: 430px) {
+@media (max-width: 420px) {
 	.invite-message {
 		width: 100%;
 	}
+	.description {
+		margin-top: 41px;
+	}
+
 	.header__images {
 		width: 100%;
 		padding: 0 10px;
